:rewind: - fix: revert align-items rule on Page component and fix layout in Storybook story

--- a/src/components/layout/page/page.scss
+++ b/src/components/layout/page/page.scss
@@ -1,7 +1,6 @@
 @use "../../../settings/constants";
 
 .mykn-page {
-  align-items: start;
   justify-content: start;
   background-color: var(--page-color-background);
   container-name: page;
